# nive

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake  VersionInfo.cmake
docs/: MSIX_PACKAGING.md
include/nive/: plugin_api.h
locales/: en.toml
packaging/msix/: AppxManifest.xml
plugins/: CMakeLists.txt  CMakePresets.json
plugins/avif/: CMakeLists.txt  PatchAomNasm.cmake  avif_plugin.cpp
resources/: nive.rc  resource.h
scripts/: build-release.ps1  collect-licenses.ps1  create-msix.ps1
src/: CMakeLists.txt  main.cpp  version.h.in
src/core/: CMakeLists.txt
src/core/archive/: archive_entry.cpp  archive_entry.hpp  archive_error.hpp  archive_manager.cpp  archive_manager.hpp  archive_reader.cpp  archive_reader.hpp  virtual_path.cpp  virtual_path.hpp
src/core/cache/: cache_database.cpp  cache_database.hpp  cache_error.hpp  cache_manager.cpp  cache_manager.hpp  thumbnail_data.cpp  thumbnail_data.hpp
src/core/config/: settings.cpp  settings.hpp  settings_manager.cpp  settings_manager.hpp
src/core/fs/: directory.cpp  directory.hpp  file_conflict.cpp  file_conflict.hpp  file_metadata.cpp  file_metadata.hpp  file_operations.cpp  file_operations.hpp  natural_sort.cpp  natural_sort.hpp  shell_file_operation.cpp  shell_file_operation.hpp  trash.cpp  trash.hpp
src/core/i18n/: i18n.cpp  i18n.hpp  icu_formatter.cpp  icu_formatter.hpp  locale_detector.cpp  locale_detector.hpp  message_store.cpp  message_store.hpp
src/core/image/: decoded_image.hpp  image_decoder.hpp  image_scaler.cpp  image_scaler.hpp  wic_decoder.cpp  wic_decoder.hpp
src/core/plugin/: plugin_loader.cpp  plugin_loader.hpp  plugin_manager.cpp  plugin_manager.hpp
src/core/thumbnail/: thumbnail_generator.cpp  thumbnail_generator.hpp  thumbnail_queue.cpp  thumbnail_queue.hpp  thumbnail_request.hpp
src/core/util/: com_ptr.hpp  hash.cpp  hash.hpp  logger.hpp  result.hpp  string_utils.cpp  string_utils.hpp  thread_pool.cpp  thread_pool.hpp  win32_utils.hpp
src/ui/: CMakeLists.txt  app.cpp  app.hpp  file_operation_manager.cpp  file_operation_manager.hpp  image_viewer_window.cpp  image_viewer_window.hpp  main_window.cpp  main_window.hpp
src/ui/components/: directory_tree.cpp  directory_tree.hpp  file_list_view.cpp  file_list_view.hpp  thumbnail_grid.cpp  thumbnail_grid.hpp
src/ui/d2d/: CMakeLists.txt
src/ui/d2d/base/: component.cpp  component.hpp  container.hpp  event.hpp
src/ui/d2d/components/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  combobox.cpp  combobox.hpp  editbox.cpp  editbox.hpp  groupbox.cpp  groupbox.hpp  label.cpp  label.hpp  listbox.cpp  listbox.hpp  panel.hpp  radiobutton.cpp  radiobutton.hpp  spinedit.cpp  spinedit.hpp  tabcontrol.cpp  tabcontrol.hpp
src/ui/d2d/core/: bitmap_utils.cpp  bitmap_utils.hpp  d2d_factory.cpp  d2d_factory.hpp  device_resources.cpp  device_resources.hpp  types.hpp
src/ui/d2d/dialog/: d2d_dialog.cpp  d2d_dialog.hpp
src/ui/d2d/dialog/about/: d2d_about_dialog.cpp  d2d_about_dialog.hpp
src/ui/d2d/dialog/delete_confirm/: d2d_delete_confirm_dialog.cpp  d2d_delete_confirm_dialog.hpp
src/ui/d2d/dialog/file_conflict/: d2d_file_conflict_dialog.cpp  d2d_file_conflict_dialog.hpp
src/ui/d2d/dialog/rename/: d2d_rename_dialog.cpp  d2d_rename_dialog.hpp
src/ui/d2d/dialog/settings/: d2d_settings_dialog.cpp  d2d_settings_dialog.hpp
src/ui/d2d/dialog/test/: d2d_test_dialog.cpp  d2d_test_dialog.hpp
src/ui/d2d/styles/: default_style.hpp
src/ui/dnd/: drop_source.cpp  drop_source.hpp  drop_target.cpp  drop_target.hpp  file_data_object.cpp  file_data_object.hpp
src/ui/state/: app_state.cpp  app_state.hpp
tests/: CMakeLists.txt  test_main.cpp
